--- a/student_form.html
+++ b/student_form.html
@@ -12,7 +12,7 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background: #f0f2f5;
+      background: hsl(216, 20%, 95%);
       flex-direction: column;
     }
 
